[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/Enemy.png" type="Texture" id=2]
[ext_resource path="res://Sounds/enemy_damage.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/enemy_death.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 4, 5, 4, 1, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.75
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 12.9215, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.8975, 18.6427 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 13.7887
height = 2.5003

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Attack = SubResource( 1 )
anims/Damage = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 31.8203, 30.7536 )
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="walk_timer" type="Timer" parent="." groups=[
"timer",
]]
one_shot = true

[node name="idle_timer" type="Timer" parent="." groups=[
"timer",
]]
wait_time = 0.25
one_shot = true

[node name="attack_timer" type="Timer" parent="." groups=[
"timer",
]]
wait_time = 0.8
one_shot = true

[node name="damage_timer" type="Timer" parent="." groups=[
"timer",
]]
one_shot = true

[node name="DamageSound" type="AudioStreamPlayer2D" parent="." groups=[
"enemy",
]]
stream = ExtResource( 3 )
volume_db = 15.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 9.029

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32.8158, 22.1246 )
rotation = 3.14159
shape = SubResource( 6 )
one_way_collision_margin = 0.0

[node name="area_timer" type="Timer" parent="Area2D"]

[node name="AreaTop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTop"]
position = Vector2( 32.9866, 11.2968 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="walk_timer" to="." method="_on_walk_timer_timeout"]
[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="damage_timer" to="." method="_on_damage_timer_timeout"]
